# weekly_staffing

./: .env.example  .gitignore  Backup_Staffing_DB.bat  CLAUDE.md  Create Desktop Shortcut.bat  Open_Dashboard.bat  Open_Staffing_Dashboard.bat  README.md  Restore_Staffing_DB.bat  Run_Staffing_Django.bat  Stop_Crew_Hub.bat  Update_Crew_Hub.bat  pyproject.toml  requirements-dev.txt  requirements.txt
bmf_staffing/: README.md  manage.py
docs/: BMF_Visual_Style_Spec.md  HUB_ARCHITECTURE_ROADMAP.md  kpi_thresholds_defaults.md  report-generator-spec.md
scripts/: backfill_schedules.py  build_app_icon.py  build_quarterly_report.py  build_weekly_report.py  create_desktop_shortcut.ps1  launch_crew_hub.ps1  launch_crew_hub.vbs  setup_report_fonts.py
staffing_tool/: __init__.py  __main__.py  cli.py  data_quality.py  db.py  db_backup.py  fiscal_year.py  leave_grid.py  manager_names.py  manager_roster.py  metrics.py  models.py  monthly_html_report.py  monthly_report.py  paths.py  person_names.py  person_ops.py  quarterly_pdf_report.py  quarterly_standalone_report.py  rag.py  report.py  report_board_summary.py  report_data.py  report_excel_style.py  report_html.py  report_style.py  report_weekly_detail.py  schedule_aggregate.py  schedule_apply.py  schedule_cells.py  schedule_data.py  schedule_grid.py  schedule_import.py  schedule_ops_view.py  schedule_persistence.py  schedule_types.py  schedule_workbook.py  staff_roster.py  time_buckets.py  timeutil.py  (+5 more)
tests/: test_backfill_schedules.py  test_board_pack_excel.py  test_coverage_heatmap.py  test_data_quality.py  test_database_backups.py  test_db_backup.py  test_fiscal_year.py  test_html_reports.py  test_metrics.py  (+25 more)
(+134 files in other folders)
