[project]
name = "weekly-staffing"
version = "0.0.0"
requires-python = ">=3.11"
description = "BMF weekly staffing KPI tool (staffing_tool) and Django dashboard"

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["staffing_tool", "bmf_staffing"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line length (formatter is authoritative)
]

[tool.ruff.lint.per-file-ignores]
"**/migrations/**" = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
